--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -2,22 +2,76 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Project Website</title>
+    <title>Team 17 Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+      body {
+        padding: 50px;
+      }
+      h1 {
+        margin-top: 50px;
+        margin-bottom: 20px;
+        font-size: 2.5rem;
+        font-weight: bold;
+      }
+      p {
+        font-size: 1.25rem;
+        line-height: 1.5;
+      }
+      iframe {
+        margin-top: 20px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Introduction and Motivation</h1>
-    <p>Insert your introduction and motivation text here.</p>
+    <div class="container">
+      <h1>Introduction and Motivation</h1>
+      <p>Our project aims to tackle the significant problem of medication non-adherence. It is a widespread issue that affects many people, especially 
+        those with chronic conditions, older adults, and individuals with disabilities. Our solution is a smart medication dispenser that reminds users 
+        when it's time to take their medication, thus increasing adherence to the medication regimen. To ensure that our dispenser is accessible to all 
+        users, we employed a universal design approach, ensuring that it is usable by individuals with various physical abilities and for any type of 
+        medication. We created a 3D printed prototype, which allowed 
+        us to visualize the product better, identify design issues and refine the design to ensure that it met our specifications. The prototype also 
+        helped us to test the functionality and usability of the dispenser, giving us valuable feedback on how to make it better.</p>
 
-    <h1>YouTube Promotion Video</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h1>YouTube Promotion Video</h1>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE"
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
 
-    <h1>Presentation Slides</h1>
-    <p>Insert a link to your presentation slides from Week 15 here.</p>
+      <h1>Presentation Slides</h1>
+      <p>Click <a href="https://docs.google.com/presentation/d/1NSFRPilgBTE9vqEnUrnWKUj5EXJcKe8hNcMQZVRRXVo/edit?usp=sharing" target="_blank">here</a> to view our presentation slides.</p>
 
-    <h1>Key Insights from Peer Feedback</h1>
-    <p>Insert your key insights from peer feedback here.</p>
+      <h1>Key Insights from Peer Feedback</h1>
+      <p>Overall, it seems like our presentation was received positively by the audience. We did a good job introducing the problem and establishing our 
+        target demographic. The 3D printed model was well done, and many people liked it. However, some people felt like our slides were too wordy and 
+        could have been more concise. We also received feedback that we should have included more diverse groups of people in our consideration, such as 
+        those with mobility issues or who take medications while out and about. Additionally, we could have improved the presentation by not reading off 
+        of the slides as much and being more natural.</p>
 
-    <h1>Conclusion and Future Work</h1>
-    <p>Insert your conclusion and future work text here.</p>
+      <h1>Conclusion and Future Work</h1>
+      <p>Our project has a great real-world impact, especially for elderly patients. It is a universal design that could apply to everyone, but 
+        we could still make it more accessible for people with mobility issues or who have to take medications while out and about. It is a 
+        good idea, but it could be expanded upon in the future to differentiate between medication in the event of having to take multiple medicines at 
+        the same time.
+        
+        We received positive feedback on our medication dispenser prototype, and we can continue to work on it in the future to 
+        make it more accessible and improve its functionality. Future work could include differentiating between medication in the event of having to 
+        take multiple medicines at the same time and making the dispenser more accessible for people with mobility issues or who have to take medications 
+        while out and about. We could additionally create a mobile app to alert patients when they are not present.</p>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi4h1f"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
   </body>
 </html>
