--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>Team 17 Project: Smart Medication Dispenser</h1>
       <h1>Introduction and Motivation</h1>
       <p>Our project aims to tackle the significant problem of medication non-adherence. It is a widespread issue that affects many people, especially 
         those with chronic conditions, older adults, and individuals with disabilities. Our solution is a smart medication dispenser that reminds users 
