--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -37,7 +37,7 @@
 
       <h1>YouTube Promotion Video</h1>
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_HERE"
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/3tU4LSZX8oE"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
